force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/Encuesta_de_Satisfacci_n_UM__c.object-meta.xml
<CustomObject>
    <label>Encuesta de Satisfacción UM</label>
    <nameField>
        <label>Nombre de Encuesta de Satisfacción UM</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Encuestas de Satisfacción UM</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>