force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/pregunta1__c.field-meta.xml
<CustomField>
    <fullName>pregunta1__c</fullName>
    <inlineHelpText>1.¿El Asesor fue puntual respecto a la hora programada?</inlineHelpText>
    <label>1.¿El Asesor llegó puntual a la cita?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>