force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/pregunta2__c.field-meta.xml
<CustomField>
    <fullName>pregunta2__c</fullName>
    <inlineHelpText>2. En una escala del 1 al 10, ¿Cómo califica la cortesía del asesor? Donde “1 es Nada satisfecho” y “10 es Totalmente satisfecho”?</inlineHelpText>
    <label>2.¿Cómo califica la cortesía del asesor?</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>