force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/pregunta3__c.field-meta.xml
<CustomField>
    <fullName>pregunta3__c</fullName>
    <inlineHelpText>3.¿Cómo califica la preparación técnica del asesor?</inlineHelpText>
    <label>3.¿Cómo califica la preparación técnica?</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>