force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/Promedio_de_Satisfacci_n__c.field-meta.xml
<CustomField>
    <fullName>Promedio_de_Satisfacci_n__c</fullName>
    <formula>( pregunta2__c + pregunta3__c + pregunta4__c + pregunta5__c + pregunta6__c ) / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promedio de Satisfacción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>