force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/Tipo_de_encuesta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_encuesta__c</fullName>
    <label>Tipo de encuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacitación y Activaciones</fullName>
            </value>
            <value>
                <fullName>Obra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>