force-app/main/default/objects/Encuesta_de_Satisfacci_n_UM__c/fields/Unidad_M_vil__c.field-meta.xml
<CustomField>
    <fullName>Unidad_M_vil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidad Móvil</label>
    <referenceTo>Unidad_M_vil__c</referenceTo>
    <relationshipLabel>Encuestas de Satisfacción UM</relationshipLabel>
    <relationshipName>Encuestas_de_Satisfacci_n_UM</relationshipName>
    <type>Lookup</type>
</CustomField>